fix: get -> getFirst
-get(0) 대신 쓰는 게 더 명시적